--- a/templates/about.html
+++ b/templates/about.html
@@ -4,10 +4,9 @@
 <title>Stepik Travel - about</title>
 {% endblock %}
 
-
 {% block content %}
 <div class="container mt-4">
-    <h1 class="text-center">★ Это мой первый сайт на платформе: Python - Flask ★</h1>
+    <h1 class="text-center">★ Всем любителям Python-Flask большой ПРИВЕТ! ★</h1>
     <section class="mt-2 pb-2">
         <div class="card mb-2">
             <div class="embed-responsive embed-responsive-16by9">
@@ -15,7 +14,7 @@
                      src="https://pbs.twimg.com/media/Dz8Gf8qXgAMVmv3.jpg:small" alt=""/>
             </div>
             <div class="card-body">
-                <h1 class="h5 card-title text-center">★★★ Это стоило многих усилий, но я горд тем, что всё получилось!!! ★★★</h1>
+                <h1 class="h5 card-title text-center">★★★ Это пробный сайт, так что не судите строго... ★★★</h1>
             </div>
         </div>
     </section>
